<resources>
    <string name="app_name">Galactic Tavern</string>
    <string name="title_activity_comm_link_reader">CommLinkReaderActivity</string>
    <string name="title_activity_comm_link_reader_webview">Chrome tab</string>
    <string name="subtitle_by_manufacturer">by %1$s</string>
    <string name="ship_max_cargo_with_unit">%1$s tons</string>
    <string name="title_activity_ship_detail_viewer">ShipDetailViewerActivity</string>
    <string name="title_activity_user_search_result">Search results</string>
    <string name="user_search_hint">Type username</string>
    <string name="user_search_recent_history">Recent Search History</string>
    <string name="activity_user_detail_citizen_number">Citizen number</string>
    <string name="activity_user_detail_no_bio">User has not publicized a biography yet.</string>
    <string name="forum_activity_text">%1$d topics with %2$d posts</string>
    <string name="forum_section_star_citizen">STAR CITIZEN</string>
    <string name="forum_section_star_citizen_community">STAR CITIZEN COMMUNITY</string>
    <string name="forum_section_cig">CLOUD IMPERIUM GAMES</string>
    <string name="title_forum_thread_list">Threads</string>
    <string name="title_forum_thread_reader_detail">Posts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_comm_link">Comm-Links</string>
    <string name="navigation_drawer_ships">Ships</string>
    <string name="navigation_drawer_users">Users</string>
    <string name="navigation_drawer_forums">Forums</string>
    <string name="navigation_drawer_organizations">Organizations</string>
    <string name="navigation_drawer_starmap">Star Map</string>
    <string name="navigation_drawer_personal">Personal</string>
    <string name="navigation_drawer_favorites">Favorites</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_about">About</string>
    <string name="dist_light_years">%.0fAU</string>
    <string name="action_open_in_browser">Open in browser</string>
    <string name="action_ship_list_filter">Filter</string>
    <string name="action_settings">Settings</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="ship_filter_dialog_current_filter">Filtered Manufacturers</string>
    <string name="ship_filter_dialog_available_items">Available Manufacturers</string>
    <string name="ship_filter_dialog_fav_button">FAVORITES</string>
    <string name="content_desc_comm_link_backdrop_image">Comm link backdrop image</string>
    <string name="content_desc_comm_link_slide_show_item">Image slide show item</string>
    <string name="content_desc_comm_link_wrapper_header_image">Content part backdrop image</string>
    <string name="content_desc_nav_header">Nav header image</string>
    <string name="content_desc_ship_max_crew_icon">Passenger count icon</string>
    <string name="content_desc_ship_max_cargo_icon">Max cargo capacity icon</string>
    <string name="content_desc_ship_backdrop">Ship store front image</string>
    <string name="content_desc_ship_backdrop_image">Ship detail backdrop image</string>
    <string name="content_desc_ship_favorite_button">Favorite current ship</string>
    <string name="content_desc_manufacturer_filter_btn">Filter button for %1$s</string>
    <string name="content_desc_user_avatar">User avatar</string>
    <string name="content_desc_user_country_flag">Users country flag</string>
    <string name="content_desc_forum_new_discussion_count_bubble">Forum new discussion count bubble</string>
    <string name="content_desc_forum_post_count_icon">Post count icon</string>
    <string name="content_desc_forum_view_count_icon">Thread view count icon</string>
    <string name="content_desc_forum_user_avatar_image">Forum user avatar image</string>
    <string name="content_desc_list_empty">List view is empty indicator</string>
    <string name="content_desc_widget_date_text">Date of the comm link is %1$s</string>
    <string name="content_desc_widget_comm_link_title">Comm link title is %1$s</string>
    <string name="content_desc_pref_comm_link_notifications">Turns notifications for comm links on and off</string>
    <string name="content_desc_pref_usage_statistics">Turns collection of anonymous usage statistics on and off</string>
    <string name="content_desc_favorite_comm_link">Favorite current comm link</string>
    <string name="content_desc_open_system_detail">Opens currently selected system details screen</string>
    <string name="content_desc_usage_statistics_collection_accept">Accept usage statistics collection button</string>
    <string name="content_desc_usage_statistics_collection_decline">Decline usage statistics collection button</string>
    <string name="no_data">No data to show</string>
    <string name="loading">Still loading!!!!</string>
    <string name="none">None</string>
    <string name="country">Country</string>
    <string name="last_forum_visit">Last forum visit</string>
    <string name="discussions">Discussions</string>
    <string name="forum">Forum</string>
    <string name="posts">Posts</string>
    <string name="title">Title</string>
    <string name="bio">Bio</string>
    <string name="unknown">Unknown</string>
    <string name="filter">Filter</string>
    <string name="view_details">View Details</string>
    <string name="size">Size</string>
    <string name="affiliation">Affiliation</string>
    <string name="no_thanks">No, thanks</string>
    <string name="question_ask_for_data_collection">
        Please help improve the application by allowing anonymous usage statistics collection. \n
        This can easily be enabled and disabled in the settings menu.
    </string>
    <string name="onboarding_thanks">Thank you. You can change this at any time in the settings.</string>
    <string name="click_to_open_video"><![CDATA[<small><i>Click image to open the video</i></small>]]></string>
    <string name="widget_header_text">Comm Links</string>
    <string name="error_failed_to_load_comm_link_rss">Failed to load RSS feed. Please check connection</string>
    <string name="error_no_network_generic">Unable to connect to network</string>
    <string name="error_no_network_activity_reader">No network available. Some images will not be shown.</string>
    <string name="error_malformed_link">Unable to open link</string>
    <string name="sc_manufacturer_aegs" translatable="false">Aegis Dynamics</string>
    <string name="sc_manufacturer_anvl" translatable="false">Anvil Aerospace</string>
    <string name="sc_manufacturer_xian" translatable="false">Xi\'an</string>
    <string name="sc_manufacturer_cnou" translatable="false">Consolidated Outland</string>
    <string name="sc_manufacturer_crsd" translatable="false">Crusader Industries</string>
    <string name="sc_manufacturer_banu" translatable="false">Banu</string>
    <string name="sc_manufacturer_drak" translatable="false">Drake Interplanetary</string>
    <string name="sc_manufacturer_esperia" translatable="false">Esperia</string>
    <string name="sc_manufacturer_krgr" translatable="false">Kruger Intergalactic</string>
    <string name="sc_manufacturer_misc" translatable="false"><![CDATA[Musashi Industrial & Starflight Concern]]></string>
    <string name="sc_manufacturer_orig" translatable="false">Origin Jumpworks GmbH</string>
    <string name="sc_manufacturer_rsi" translatable="false">Roberts Space Industries</string>
    <string name="sc_manufacturer_vanduul" translatable="false">Vanduul</string>
    <string name="ship_detail_card_production_state">Production State</string>
    <string name="ship_detail_card_role">Role</string>
    <string name="ship_detail_card_measurement_title">Measurement</string>
    <string name="ship_detail_card_measurement_beam">Beam</string>
    <string name="ship_detail_card_measurement_height">Height</string>
    <string name="ship_detail_card_measurement_length">Length</string>
    <string name="ship_detail_card_measurement_mass">Mass</string>
    <string name="ship_detail_card_structural_title">Structural</string>
    <string name="ship_detail_card_structural_cargo_capacity">Cargo capacity</string>
    <string name="ship_detail_card_structural_max_crew">Max crew</string>
    <string name="ship_detail_card_structural_max_power_plant_size">Max power plant size</string>
    <string name="ship_detail_card_structural_factory_power_plant">Factory power plant</string>
    <string name="ship_detail_card_structural_primary_thrusters">Max Engine</string>
    <string name="ship_detail_card_structural_factory_engine">Factory engine</string>
    <string name="ship_detail_card_structural_maneuvering_thrusters">Maneuvering thrusters</string>
    <string name="ship_detail_card_structural_factory_maneuvering_thrusters">Factory maneuvering thrusters</string>
    <string name="ship_detail_card_structural_max_shield">Max shield</string>
    <string name="ship_detail_card_structural_shield">Shield</string>
    <string name="ship_detail_card_propulsion_title">Propulsion</string>
    <string name="ship_detail_card_hardpoints_title">Hardpoints</string>
    <string name="ship_detail_card_hardpoints_c1">Fixed</string>
    <string name="ship_detail_card_hardpoints_c2">Gimbal</string>
    <string name="ship_detail_card_hardpoints_c3">Pylon</string>
    <string name="ship_detail_card_hardpoints_c4">Unmanned Turret</string>
    <string name="ship_detail_card_hardpoints_c5">Manned Turret</string>
    <string name="ship_detail_card_hardpoints_c6">Class 6</string>
    <string name="ship_detail_card_hardpoints_c7">Class 7</string>
    <string name="ship_detail_card_hardpoints_c8">Class 8</string>
    <string name="ship_detail_card_hardpoints_c9">Class 9</string>
    <string name="ship_detail_card_modular_title">Additional</string>
    <string name="pref_header_data_sync">Data &amp; sync &amp; privacy</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_comm_link_notifications">New Comm-Link notifications</string>
    <string name="pref_key_new_comm_link_notifications" translatable="false">new_comm_link_notifications</string>
    <string name="pref_key_tracking" translatable="false">pref_key_tracking_enabled</string>
    <string name="pref_key_maps_camera_state" translatable="false">pref_key_maps_camera_state</string>
    <string name="pref_key_onboarding_finished">pref_key_onboarding_finished</string>
    <string name="pref_title_tracking_enabled">Anonymous usage statistics</string>
    <string name="pref_summary_tracking">Help improve the application by allowing anonymous usage tracking</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text">
        <![CDATA[This is an app about the game Star Citizen by Cloud Imperium Games.<br>
        Follow the latest official news about the developments of the game and its community.<br>
        Search for Users, Organizations and the forums. Follow your favourite organizations and users for quick access to their latest news and progressions.]]>
    </string>
    <string name="changelog">Changelog</string>
    <string name="changelog_text">
        <![CDATA[
            <p>
            <h5>V 1.0</h5>
            Initial release
            </p>
        ]]>
    </string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>