<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|top"
    android:orientation="vertical"
    tools:context=".ui.OnboardingFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal|top"
        android:contentDescription="@null"
        android:src="@drawable/ic_timeline_black_24dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/question_ask_for_data_collection"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/okButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:contentDescription="@string/content_desc_usage_statistics_collection_accept"
            android:text="@string/alert_dialog_ok" />

        <Button
            android:id="@+id/noButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:text="@string/no_thanks" />
    </LinearLayout>
</LinearLayout>
