<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shipDetailCardMainTitle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/card_view_margin_bottom"
    android:elevation="@dimen/card_view_rested_elevation_state"
    card_view:cardCornerRadius="@dimen/card_view_corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            style="@style/AppTheme.CardViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ship_detail_card_structural_title" />

        <LinearLayout
            style="@style/AppTheme.CardViewRowItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AppTheme.CardViewRowItemColumnLeft"
                android:layout_height="wrap_content"
                android:text="@string/ship_detail_card_structural_cargo_capacity" />

            <TextView
                android:id="@+id/shipDetailCardCargoCapacityTextView"
                style="@style/AppTheme.CardViewRowItemColumnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="5400" />
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.CardViewRowItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AppTheme.CardViewRowItemColumnLeft"
                android:layout_height="wrap_content"
                android:text="@string/ship_detail_card_structural_max_crew" />

            <TextView
                android:id="@+id/shipDetailCardMaxCrewTextView"
                style="@style/AppTheme.CardViewRowItemColumnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="3 persons" />
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.CardViewRowItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AppTheme.CardViewRowItemColumnLeft"
                android:layout_height="wrap_content"
                android:text="@string/ship_detail_card_structural_max_power_plant_size" />

            <TextView
                android:id="@+id/shipDetailCardMaxPowerPlantSizeTextView"
                style="@style/AppTheme.CardViewRowItemColumnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="8" />
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.CardViewRowItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AppTheme.CardViewRowItemColumnLeft"
                android:layout_height="wrap_content"
                android:text="@string/ship_detail_card_structural_factory_power_plant" />

            <TextView
                android:id="@+id/shipDetailCardFactoryPowerPlantTextView"
                style="@style/AppTheme.CardViewRowItemColumnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Etoile-77 (6)" />
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.CardViewRowItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AppTheme.CardViewRowItemColumnLeft"
                android:layout_height="wrap_content"
                android:text="@string/ship_detail_card_structural_primary_thrusters" />

            <TextView
                android:id="@+id/shipDetailCardPrimaryThrustersTextView"
                style="@style/AppTheme.CardViewRowItemColumnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="6x TR8" />
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.CardViewRowItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AppTheme.CardViewRowItemColumnLeft"
                android:layout_height="wrap_content"
                android:text="@string/ship_detail_card_structural_factory_engine" />

            <TextView
                android:id="@+id/shipDetailCardFactoryEngineTextView"
                style="@style/AppTheme.CardViewRowItemColumnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="3x E/S6-655" />
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.CardViewRowItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AppTheme.CardViewRowItemColumnLeft"
                android:layout_height="wrap_content"
                android:text="@string/ship_detail_card_structural_maneuvering_thrusters" />

            <TextView
                android:id="@+id/shipDetailCardManeuveringThrustersTextView"
                style="@style/AppTheme.CardViewRowItemColumnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="14x TR3" />
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.CardViewRowItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AppTheme.CardViewRowItemColumnLeft"
                android:layout_height="wrap_content"
                android:text="@string/ship_detail_card_structural_factory_maneuvering_thrusters" />

            <TextView
                android:id="@+id/shipDetailCardFactoryManeuveringThrustersTextView"
                style="@style/AppTheme.CardViewRowItemColumnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="14x XiTech Pro" />
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.CardViewRowItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AppTheme.CardViewRowItemColumnLeft"
                android:layout_height="wrap_content"
                android:text="@string/ship_detail_card_structural_max_shield" />

            <TextView
                android:id="@+id/shipDetailCardFactoryMaxShieldTextView"
                style="@style/AppTheme.CardViewRowItemColumnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="4" />
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.CardViewRowItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AppTheme.CardViewRowItemColumnLeft"
                android:layout_height="wrap_content"
                android:text="@string/ship_detail_card_structural_shield" />

            <TextView
                android:id="@+id/shipDetailCardFactoryShieldTextView"
                style="@style/AppTheme.CardViewRowItemColumnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="6S6A" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>