<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shipDetailCardMainTitle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/card_view_margin_bottom"
    android:elevation="@dimen/card_view_rested_elevation_state"
    card_view:cardCornerRadius="@dimen/card_view_corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.CardViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ship_detail_card_measurement_title" />

        <LinearLayout
            style="@style/AppTheme.CardViewRowItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AppTheme.CardViewRowItemColumnLeft"
                android:layout_height="wrap_content"
                android:text="@string/ship_detail_card_measurement_beam" />

            <TextView
                android:id="@+id/shipDetailCardBeamTextView"
                style="@style/AppTheme.CardViewRowItemColumnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="10.0 m" />
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.CardViewRowItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AppTheme.CardViewRowItemColumnLeft"
                android:layout_height="wrap_content"
                android:text="@string/ship_detail_card_measurement_height" />

            <TextView
                android:id="@+id/shipDetailCardHeightTextView"
                style="@style/AppTheme.CardViewRowItemColumnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="10.00 m" />
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.CardViewRowItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AppTheme.CardViewRowItemColumnLeft"
                android:layout_height="wrap_content"
                android:text="@string/ship_detail_card_measurement_length" />

            <TextView
                android:id="@+id/shipDetailCardLengthTextView"
                style="@style/AppTheme.CardViewRowItemColumnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="11.00 m" />
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.CardViewRowItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AppTheme.CardViewRowItemColumnLeft"
                android:layout_height="wrap_content"
                android:text="@string/ship_detail_card_measurement_mass" />

            <TextView
                android:id="@+id/shipDetailCardMassTextView"
                style="@style/AppTheme.CardViewRowItemColumnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12.000 Kg" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>